# claudectl

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LAUNCH_POSTS.md  README.md  flake.nix  index-old.html  index.html  mkdocs.yml  sitemap.xml  styles.css
.github/workflows/: ci.yml  notify-agent-sandbox-rebuild.yml  release.yml
AGENT_BUS/: index.html
agent-bus/: index.html
blog/: posts.md
claude-plugin/: .mcp.json
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/commands/: bind.md  inbox.md  role.md
claude-plugin/hooks/: hooks.json
claude-plugin/hooks/scripts/: brain-gate.sh  inbox-drain.sh  outcome-record.sh  session-briefing.sh
claude-plugin/skills/session-monitoring/: SKILL.md
configuration/: index.html
contributing/: index.html
crates/claudectl-core/: Cargo.toml
crates/claudectl-core/src/: config.rs  discovery.rs  forecast.rs  health.rs  helpers.rs  history.rs  hooks.rs  launch.rs  lib.rs  logger.rs  models.rs  monitor.rs  process.rs  runtime.rs  session.rs  skills.rs  theme.rs  transcript.rs
crates/claudectl-core/src/terminals/: ghostty.rs  gnome_terminal.rs  iterm2.rs  kitty.rs  mod.rs  tmux.rs  warp.rs  wezterm.rs  windows_terminal.rs
crates/claudectl-tui/: Cargo.toml
crates/claudectl-tui/src/: app.rs  demo.rs  lib.rs  recorder.rs  session_recorder.rs
crates/claudectl-tui/src/app/: actions.rs  demo.rs  filters.rs  input.rs  mod.rs  overlays.rs  update.rs
crates/claudectl-tui/src/ui/: demo_tour.rs  detail.rs  help.rs  mod.rs  peers.rs  skills.rs  status_bar.rs  supervisor.rs  table.rs
docs/: AGENT_BUS.md  agent-bus.md  configuration.md  contributing.md  hive-storage.md  index-old.html  index.md  llms.txt  policy-as-code.md  quickstart.md  reference.md  relay-and-hive.md  relay-discovery.md  relay.md  team-observability.md  terminal-support.md  troubleshooting.md
docs/grafana/: claudectl-fleet.json
docs/known-bugs/: hazmat-orphan-disconnect.md
examples/tasks/: dependency-chain.toml  fan-out.toml  verify-then-merge.toml
hive-storage/: index.html
packaging/aur/claudectl-bin/: PKGBUILD
packaging/homebrew-core/: README.md  claudectl.rb
packaging/nixpkgs/: README.md
policy-as-code/: index.html
quickstart/: index.html
reference/: index.html
relay/: index.html
relay-and-hive/: index.html
relay-discovery/: index.html
scripts/: record-demos.sh  render-aur-bin-files.sh  render-homebrew-formula.sh
search/: search_index.json
src/: action.rs  app.rs  brain_screen.rs  commands.rs  config.rs  demo.rs  demo_peers.rs  discovery.rs  doctor.rs  helpers.rs  hook_state.rs  hooks.rs  ingest.rs  init.rs  lib.rs  logger.rs  main.rs  monitor.rs  orchestrator.rs  process.rs  reaper.rs  rules.rs  sandbox_registry.rs  session.rs  session_recorder.rs  skills.rs  team_policy.rs  usage_ledger.rs
src/brain/: audit.rs  autopsy.rs  baseline.rs  briefing.rs  client.rs  context.rs  decisions.rs  detectors.rs  diff_digest.rs  engine.rs  garden.rs  health.rs  heuristic.rs  insights.rs  metrics.rs  mod.rs  outcomes.rs  pref_store.rs  preferences.rs  prompts.rs  retrieval.rs  review.rs  risk.rs  sequences.rs
src/brain/metrics/: accuracy.rs  approvals.rs  mod.rs  perf.rs
src/bus/: cli.rs  mcp.rs  mod.rs  policy.rs  rate_limit.rs  roles.rs  stop_hook.rs  store.rs  suggest.rs
src/coord/: actuator.rs  adapter.rs  adapter_claude.rs  adapter_codex.rs  cli.rs  evals.rs  events.rs  exporter.rs  hook_events.rs  injection.rs  interrupt_bus.rs  metrics.rs  mod.rs  pr.rs  promotion.rs  resume.rs  session_policy.rs  store.rs  supervisor.rs  supervisor_cli.rs  tasks.rs  types.rs  verify.rs
src/hive/: accept.rs  archive.rs  cli.rs  convergence.rs  discovery.rs  distiller.rs  effectiveness.rs  exposure.rs  feedback.rs  gossip.rs  injection.rs  merger.rs  mod.rs  store.rs  trust.rs
src/hive/cli/: effectiveness.rs  mod.rs  onboarding.rs  share.rs
src/init/: hooks.rs  marker.rs  mod.rs  nudge.rs  phases.rs  plugin_assets.rs  prompt.rs  state.rs
src/relay/: cli.rs  crypto.rs  delegation.rs  http.rs  invite.rs  lan.rs  listener.rs  mesh.rs  mod.rs  peer.rs  protocol.rs  worker.rs
src/runtime/: actions.rs  brain.rs  brain_driver.rs  brain_review.rs  bus.rs  coord.rs  hive.rs  mod.rs  orchestrator.rs  sessions.rs
src/terminals/: apple.rs  ghostty.rs  iterm2.rs  kitty.rs  mod.rs  sandbox_terminal_bridge.rs  tmux.rs  warp.rs  wezterm.rs
src/ui/: brain.rs  detail.rs  help.rs  mod.rs  peers.rs  skills.rs  status_bar.rs  table.rs
stylesheets/: extra.css
team-observability/: index.html
terminal-support/: index.html
tests/: integration_tests.rs  unit_tests.rs
troubleshooting/: index.html
