[package]
name = "claudectl"
version = "0.49.2"
edition = "2024"
description = "Mission control for Claude Code — supervise, orchestrate, and connect coding agents with a local LLM brain and hive mind"
license = "MIT"
repository = "https://github.com/mercurialsolo/claudectl"
homepage = "https://mercurialsolo.github.io/claudectl/"
keywords = ["claude-code", "agent-orchestration", "local-llm", "tui", "hive-mind"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["*.gif", "*.cast", "claude-demo.*", "CLAUDE.md", ".github/"]

[features]
default = ["hive"]
coord = ["rusqlite"]
relay = []
hive = []

[[bin]]
name = "claudectl"
path = "src/main.rs"

[lib]
name = "claudectl"
path = "src/lib.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
ctrlc = "3"
rusqlite = { version = "0.33", features = ["bundled"], optional = true }

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.33", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
