[workspace]
members = ["crates/claudectl-core"]
# The root package is also a workspace member (the binary crate). Future epics
# (extract claudectl-tui, claudectl-brain, etc. — see #279) will add more.

[package]
name = "claudectl"
version = "0.53.0"
edition = "2024"
description = "Orchestrate a swarm of Claude Code agents with a local-LLM brain that learns from you."
license = "MIT"
repository = "https://github.com/mercurialsolo/claudectl"
homepage = "https://mercurialsolo.github.io/claudectl/"
keywords = ["claude-code", "agent-orchestration", "local-llm", "tui", "hive-mind"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["*.gif", "*.cast", "claude-demo.*", "CLAUDE.md", ".github/"]

[features]
default = ["hive"]
coord = ["rusqlite"]
relay = []
hive = []
# The agent bus (docs/AGENT_BUS.md). Lives on top of coord's SQLite layer and
# pulls in an async MCP server stack (rmcp + tokio). Opt-in: the default build
# stays small and sync.
bus = ["coord", "dep:rmcp", "dep:tokio", "dep:schemars", "dep:async-trait"]

[[bin]]
name = "claudectl"
path = "src/main.rs"

[lib]
name = "claudectl"
path = "src/lib.rs"

[dependencies]
claudectl-core = { path = "crates/claudectl-core" }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
libc = "0.2"
ctrlc = "3"
rusqlite = { version = "0.33", features = ["bundled"], optional = true }

# Agent bus stack (feature = "bus"). The MCP SDK and its runtime are async-only;
# enabling the bus deliberately relaxes the no-async-runtime invariant noted in
# CLAUDE.md for that single feature path.
rmcp = { version = "0.3", features = ["server", "macros", "transport-io", "schemars"], optional = true }
tokio = { version = "1", features = ["rt", "macros", "io-std", "sync", "signal"], optional = true }
schemars = { version = "1.0", optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.33", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
